modified css and index.html

--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
 
                     <button class="accordion"><b>What if my water storage is small?</b></button>
                     <div class="panel">
-                        <p>You still pay for the full cost of the service.</p>
+                        <p>You still pay for the full cost of the service.
+                            However the remainder of the water could be given
+                            to a neighbour, used for watering of garden etc,
+                            if allowed by you.
+                        </p>
                     </div>
 
                     <button class="accordion"><b>Do you deliver bore-hole or treated water?</b></button>
@@ -219,6 +223,23 @@
                            order is placed.
                         </p>
                     </div>
+
+                    <button class="accordion"><b>Which areas do your services cover?</b></button>
+                    <div class="panel">
+                        <p>
+                            For now, we only operate in the Greater Accra Region.
+                        </p>
+                    </div>
+
+                    <button class="accordion"><b>Have a question we didn't answer?</b></button>
+                    <div class="panel">
+                        <p>
+                            If you'd like to ask something else, please 
+                            <a class="more-questions" href="#">get in touch</a> where we will 
+                            be more than happy to help.
+                        </p>
+                    </div>
+
                 </div>
 
         </section>
@@ -238,8 +259,19 @@
 
             </div>
 
+            <!--Contact time-->
             <div>
                 <h3 class="h3-contact-time">Monday - Sunday: 7:00am - 5:00pm</h3>
+            </div>
+
+             <!--Contact us-->
+             <div class="contact-us">
+                <div class="contact-us-item">
+                    <div class="contact-us-icon">
+                        <i class="fas fa-comment fa-3x"></i>
+                    </div>
+
+                </div>
             </div>
         </section>
     </main>
