modified css and index.html

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                         <img class="illus-size" src="images/call.png" alt="Person calling">
                         <p class="hw-color">1. Make your request</p>
                         <p class="hw-color"><i class="fas fa-mobile-alt fa-2x"></i> 
-                        <span class="adjust">Call 0261486520</span></p>
-                        <p class="hw-color"><i class="fab fa-whatsapp fa-2x"></i>
-                            <span class="adjust wa-size">0261486520</span></p>
+                        <span class="adjust"><a class="call" href= "tel:0261486520">Call 0261486520</a></a></span></p>
+                        <p class="hw-color"><i class="fab fa-whatsapp fa-2x how-it-whatsapp"></i>
+                            <span class="adjust wa-size"><a class="whatsapp-link" href="https://wa.me/233261486520?text=Hi there!">0261486520</a></span></p>
                     </div>
 
                     <div class="card1">
@@ -184,7 +184,8 @@
                     <button class="accordion"><b>What is the cost of a tanker delivery?</b></button>
                     <div class="panel">
                         <p>Tanker delivery cost between 350-450ghc based
-                           on the size of the tanker and distance of the customer.
+                           on the size of the tanker and distance between filling point 
+                           and the customer.
                         </p>
                     </div>
 
@@ -196,7 +197,7 @@
                     <button class="accordion"><b>Are there any extra delivery charges?</b></button>
                     <div class="panel">
                         <p>Yes, there are sometimes extra delivery charges.
-                            For example, if there is interruption in water supply to 
+                            For example, if there is interruption in water supply in 
                             Tema by Ghana water company due to maintenance works. Tankers
                             would have to get water from Accra hence increasing the cost.
                         </p>
@@ -235,7 +236,7 @@
                     <div class="panel">
                         <p>
                             If you'd like to ask something else, please 
-                            <a class="more-questions" href="#">get in touch</a> where we will 
+                            <a class="more-questions" href="mailto:someone@example.com">get in touch</a> where we will 
                             be more than happy to help.
                         </p>
                     </div>
@@ -270,7 +271,32 @@
                     <div class="contact-us-icon">
                         <i class="fas fa-comment fa-3x"></i>
                     </div>
+                    <p class="contact-us-text"><b>Let's have a chat.</b></p>
+                    <a id="123" class="contact-us-link" href="#">Start a Live Chat</a>
+                </div>
 
+                <div class="contact-us-item">
+                    <div class="contact-us-icon">
+                        <i class="fas fa-envelope fa-3x"></i>
+                    </div>
+                    <p class="contact-us-text"><b>Drop us a line.</b></p>
+                    <a class="contact-us-link" href="mailto:someone@example.com">Send an Email</a>
+                </div>
+
+                <div class="contact-us-item">
+                    <div class="contact-us-icon">
+                        <i class="fab fa-whatsapp fa-3x"></i>
+                    </div>
+                    <p class="contact-us-text"><b>Text us.</b></p>
+                    <a class="contact-us-link" href="https://wa.me/233261486520?text=Hi there">Whatsapp us</a>
+                </div>
+
+                <div class="contact-us-item">
+                    <div class="contact-us-icon social"></div>
+                    <p class="contact-us-text">
+                        <a href="">Tweet us.</a>
+                    </p>
+                    <a class="contact-us-link" href="https://wa.me/233261486520?text=Hi there">Whatsapp us</a>
                 </div>
             </div>
         </section>
