modified css and index.html

--- a/index.html
+++ b/index.html
@@ -294,13 +294,37 @@
                 <div class="contact-us-item">
                     <div class="contact-us-icon social"></div>
                     <p class="contact-us-text">
-                        <a href="">Tweet us.</a>
+                        <a class="contact-us-social-link" href="twitter.com">Tweet us.</a>
                     </p>
-                    <a class="contact-us-link" href="https://wa.me/233261486520?text=Hi there">Whatsapp us</a>
+                    <div class="contact-us-black-line"></div>
+                    <p class="contact-us-text">
+                        <a class="contact-us-social-link" href="facebook.com">Facebook us.</a>
+                    </p>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-flex1 container">
+            <div class="quick-contact">
+                <h4 class="quick-footer">Quick Contact</h4>
+                <p class="p-footer p-margin">Phone: +233261486520</p>
+                <p class="p-footer">Email: info@email.com</p>
+            </div>
+
+            <div class="social-links">
+                <div class="social-margin"><a class="footer-links" href="twitter.com"><i class="fab fa-twitter"></i></a></div>
+                <div class="social-margin"><a class="footer-links" href="facebook.com"><i class="fab fa-facebook-f"></i></a></div>
+            </div>
+        </div>
+
+        <div class="footer-border container"></div>
+        <div class="container copyright-flexbox">
+            <div class="footer-copyright"><p>Water Tanker Supply &copy; 2021</p></div>
+            <div class="footer-copyright"><p>Designed by ozeecodes</p></div>
+        </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
