modified js and html files

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#index.html">HOME</a></li>
                     <li><a href="#services">SERVICES</a></li>
                     <li><a href="#howitworks">HOW IT WORKS</a></li>
+                    <li><a href="#faqs">FAQs</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </nav>
@@ -174,7 +175,7 @@
         </section>    
 
         <!--Frequently Asked Questions-->
-        <section class="container view">
+        <section id="faqs" class="container view">
                 <div class="sub-heading1">
                     <h2 class="h2-text faq">FREQUENTLY ASKED QUESTIONS</h2>
                 </div>
@@ -183,7 +184,7 @@
                 <div class="acc-flex">
                     <button class="accordion"><b>What is the cost of a tanker delivery?</b></button>
                     <div class="panel">
-                        <p>Tanker delivery cost between 350-450ghc based
+                        <p>Tanker delivery cost is based
                            on the size of the tanker and distance between filling point 
                            and the customer.
                         </p>
@@ -199,7 +200,7 @@
                         <p>Yes, there are sometimes extra delivery charges.
                             For example, if there is interruption in water supply in 
                             Tema by Ghana water company due to maintenance works. Tankers
-                            would have to get water from Accra hence increasing the cost.
+                            would have to get water from Accra to Tema hence increasing the cost.
                         </p>
                     </div>
 
@@ -236,7 +237,7 @@
                     <div class="panel">
                         <p>
                             If you'd like to ask something else, please 
-                            <a class="more-questions" href="mailto:someone@example.com">get in touch</a> where we will 
+                            <a class="more-questions" href="javascript:void(Tawk_API.toggle())">get in touch</a> where we will 
                             be more than happy to help.
                         </p>
                     </div>
@@ -272,7 +273,7 @@
                         <i class="fas fa-comment fa-3x"></i>
                     </div>
                     <p class="contact-us-text"><b>Let's have a chat.</b></p>
-                    <a id="123" class="contact-us-link" href="#">Start a Live Chat</a>
+                    <a id="123" class="contact-us-link" href="javascript:void(Tawk_API.toggle())">Start a Live Chat</a>
                 </div>
 
                 <div class="contact-us-item">
@@ -326,7 +327,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
 
