--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="card1">
                         <img class="illus-size" src="images/connection.png" alt="checking connection">
                         <p class="hw-color">2. Our system will track the closest tanker
-                            car.
+                            car and calculate the cost.
                         </p>
                     </div>
 
@@ -208,7 +208,7 @@
                     <div class="panel">
                         <p>You still pay for the full cost of the service.
                             However the remainder of the water could be given
-                            to a neighbour, used for watering of garden etc,
+                            to a neighbour, used for watering of garden, etc,
                             if allowed by you.
                         </p>
                     </div>
@@ -263,7 +263,7 @@
 
             <!--Contact time-->
             <div>
-                <h3 class="h3-contact-time">Monday - Sunday: 7:00am - 5:00pm</h3>
+                <h3 class="h3-contact-time">Monday - Sunday: 7:00am - 8:00pm</h3>
             </div>
 
              <!--Contact us-->
@@ -310,8 +310,8 @@
         <div class="footer-flex1 container">
             <div class="quick-contact">
                 <h4 class="quick-footer">Quick Contact</h4>
-                <p class="p-footer p-margin">Phone: +233261486520</p>
-                <p class="p-footer">Email: info@email.com</p>
+                <p class="p-footer p-margin">Phone: <a class="p-footer" href="tel:0261486520">+233261486520</a></p>
+                <p class="p-footer">Email: <a class="p-footer" href="mailto: info@email.com">info@email.com</a></p>
             </div>
 
             <div class="social-links">
@@ -323,7 +323,7 @@
         <div class="footer-border container"></div>
         <div class="container copyright-flexbox">
             <div class="footer-copyright"><p>Water Tanker Supply &copy; 2021</p></div>
-            <div class="footer-copyright"><p>Designed by ozeecodes</p></div>
+            <div class="footer-copyright"><p>Designed by <a class="footer-copyright" href="#">ozeecodes</a></p></div>
         </div>
     </footer>
 
