--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
         </div>
     </header>
 
+    <!--Mobile menu for smaller screens-->
+    <div class="mobile-container">
+        <div class="topnav">
+            <div class="flex-mobileMenu">
+              <div><a href="javascript:void(0)" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></div>
+              <div><a href="#">WATER TANKER SUPPLY</a></div>
+              <div><a href="tel:0561486520"><i class="fas fa-phone"></i>    </a></div>
+            </div>
+            
+            <div id="myLinks" class="links">
+              <a href="#index.html">HOME</a>
+              <a href="#services">SERVICES</a>
+              <a href="#howitworks">HOW IT WORKS</a>
+              <a href="#faqs">FAQs</a>
+              <a href="#contact">CONTACT</a>
+            </div>
+          </div>
+
+    </div>
+
     <div id="dummy-div"></div>
 
     <!--Main Section-->
