modified css/styles.css, index.html and js/script.js

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
             <div class="flex-mobileMenu">
               <div><a href="javascript:void(0)" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></div>
               <div><a href="#">WATER TANKER SUPPLY</a></div>
-              <div><a href="tel:0561486520"><i class="fas fa-phone"></i>    </a></div>
+              <div><a href="tel:0552575902"><i class="fas fa-phone"></i>    </a></div>
             </div>
             
+           
             <div id="myLinks" class="links">
-              <a href="#index.html">HOME</a>
-              <a href="#services">SERVICES</a>
-              <a href="#howitworks">HOW IT WORKS</a>
-              <a href="#faqs">FAQs</a>
-              <a href="#contact">CONTACT</a>
+              <a href="#index.html" onclick="myFunction()">HOME</a>
+              <a href="#services" onclick="myFunction()">SERVICES</a>
+              <a href="#howitworks" onclick="myFunction()">HOW IT WORKS</a>
+              <a href="#faqs" onclick="myFunction()">FAQs</a>
+              <a href="#contact" onclick="myFunction()">CONTACT</a>
             </div>
           </div>
-
     </div>
 
     <div id="dummy-div"></div>
