modified css/styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!--Main Section-->
     <main>
     <!--Landing Page-->    
-        <figure class="overlay-image" id="index.html">
+        <figure class="overlay-image view" id="index.html">
             <img class="image" src="images/Water Hero Illustration-8-small-size.png" alt="background image">
             <figcaption class="overlay-text hero-text">WATER SUPPLY, SIMPLIFIED!</figcaption>
             <p class="hero-text1">Thinking of how to get portable water to your
