modified css/styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="topnav">
             <div class="flex-mobileMenu">
               <div><a href="javascript:void(0)" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></div>
-              <div><a href="#">WATER TANKER SUPPLY</a></div>
-              <div><a href="tel:0552575902"><i class="fas fa-phone"></i>    </a></div>
+              <div><a href="#index.html"><h4>WATER TANKER SUPPLY</h4></a></div>
+              <div><a href="tel:0552575902"><i class="fas fa-phone"></i></a></div>
             </div>
             
            
