modified css/styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </p>
                 </div>  
 
-                <div class="grid-1">
+                <div class="grid-1 grid-flex">
                     <div class="card1">
                         <img class="illus-size" src="images/call.png" alt="Person calling">
                         <p class="hw-color">1. Make your request</p>
