modified css/styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
                 
                 <!--Creating Collapsibles/Accordion-->
                 <div class="acc-flex">
+
+                    <button class="accordion"><b>What is the size of water delivery tanker?</b></button>
+                    <div class="panel">
+                        <p>Water delivery tankers holds 10,000 litres and 13,000 litres.</p>
+                    </div>
+
                     <button class="accordion"><b>What is the cost of a tanker delivery?</b></button>
                     <div class="panel">
                         <p>Tanker delivery cost is based
@@ -209,16 +215,11 @@
                         </p>
                     </div>
 
-                    <button class="accordion"><b>What is the size of water delivery tanker?</b></button>
-                    <div class="panel">
-                        <p>Water delivery tankers holds 10,000 litres and 13,000 litres.</p>
-                    </div>
-
                     <button class="accordion"><b>Are there any extra delivery charges?</b></button>
                     <div class="panel">
                         <p>Yes, there are sometimes extra delivery charges.
-                            For example, if there is interruption in water supply in 
-                            Tema by Ghana water company due to maintenance works. Tankers
+                            For example, if the main supply goes off in 
+                            Tema due to maintenance works. Tankers
                             would have to get water from Accra to Tema hence increasing the cost.
                         </p>
                     </div>
