--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             </div>
 
              <!--Contact us-->
-             <div class="contact-us">
+             <div class="contact-us contact-us-grid">
                 <div class="contact-us-item">
                     <div class="contact-us-icon">
                         <i class="fas fa-comment fa-3x"></i>
