--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="contact-us-item">
                     <div class="contact-us-icon social"></div>
                     <p class="contact-us-text">
-                        <a class="contact-us-social-link" href="twitter.com">Tweet us.</a>
+                        <a class="contact-us-social-link" href="https://twitter.com/wt_supply">Tweet us.</a>
                     </p>
                     <div class="contact-us-black-line"></div>
                     <p class="contact-us-text">
@@ -335,7 +335,7 @@
             </div>
 
             <div class="social-links">
-                <div class="social-margin"><a class="footer-links" href="twitter.com"><i class="fab fa-twitter"></i></a></div>
+                <div class="social-margin"><a class="footer-links" href="https://twitter.com/wt_supply"><i class="fab fa-twitter"></i></a></div>
                 <div class="social-margin"><a class="footer-links" href="facebook.com"><i class="fab fa-facebook-f"></i></a></div>
             </div>
         </div>
