--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <i class="fas fa-envelope fa-3x"></i>
                     </div>
                     <p class="contact-us-text"><b>Drop us a line.</b></p>
-                    <a class="contact-us-link" href="mailto:someone@example.com">Send an Email</a>
+                    <a class="contact-us-link" href="mailto:contact@watertankersupply.com">Send an Email</a>
                 </div>
 
                 <div class="contact-us-item">
