--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <i class="fas fa-envelope fa-3x"></i>
                     </div>
                     <p class="contact-us-text"><b>Drop us a line.</b></p>
-                    <a class="contact-us-link" href="mailto:contact@watertankersupply.com">Send an Email</a>
+                    <a class="contact-us-link" href="mailto:contact@watertankersupply.com" target="_blank" rel="noopener noreferrer">Send an Email</a>
                 </div>
 
                 <div class="contact-us-item">
@@ -309,17 +309,17 @@
                         <i class="fab fa-whatsapp fa-3x"></i>
                     </div>
                     <p class="contact-us-text"><b>Text us.</b></p>
-                    <a class="contact-us-link" href="https://wa.me/233552575902?text=Hi there">Whatsapp us</a>
+                    <a class="contact-us-link" href="https://wa.me/233552575902?text=Hi there" target="_blank" rel="noopener noreferrer">Whatsapp us</a>
                 </div>
 
                 <div class="contact-us-item">
                     <div class="contact-us-icon social"></div>
                     <p class="contact-us-text">
-                        <a class="contact-us-social-link" href="https://twitter.com/wt_supply">Tweet us.</a>
+                        <a class="contact-us-social-link" href="https://twitter.com/wt_supply" target="_blank" rel="noopener noreferrer">Tweet us.</a>
                     </p>
                     <div class="contact-us-black-line"></div>
                     <p class="contact-us-text">
-                        <a class="contact-us-social-link" href="facebook.com">Facebook us.</a>
+                        <a class="contact-us-social-link" href="facebook.com" target="_blank" rel="noopener noreferrer">Facebook us.</a>
                     </p>
                 </div>
             </div>
@@ -331,12 +331,12 @@
             <div class="quick-contact">
                 <h4 class="quick-footer">Quick Contact</h4>
                 <p class="p-footer p-margin">Phone: <a class="p-footer" href="tel:0552575902">+2332552575902</a></p>
-                <p class="p-footer">Email: <a class="p-footer" href="mailto: info@email.com">info@email.com</a></p>
+                <p class="p-footer">Email: <a class="p-footer" href="mailto:contact@watertankersupply.com" target="_blank" rel="noopener noreferrer">contact@watertankersupply.com</a></p>
             </div>
 
             <div class="social-links">
-                <div class="social-margin"><a class="footer-links" href="https://twitter.com/wt_supply"><i class="fab fa-twitter"></i></a></div>
-                <div class="social-margin"><a class="footer-links" href="facebook.com"><i class="fab fa-facebook-f"></i></a></div>
+                <div class="social-margin"><a class="footer-links" href="https://twitter.com/wt_supply" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></div>
+                <div class="social-margin"><a class="footer-links" href="facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></div>
             </div>
         </div>
 
