modified css/styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                     <button class="accordion"><b>What is the cost of a tanker delivery?</b></button>
                     <div class="panel">
                         <p>Tanker delivery cost is based
-                           on the size of the tanker and distance between filling point 
-                           and the customer.
+                           on the size of the tanker and the distance between the filling point 
+                           and the customer and costs between 320gh<span>&#8373;</span> and 450gh<span class="cedis">&#8373;</span>.
                         </p>
                     </div>
 
