modified css/styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="panel">
                         <p>Tanker delivery cost is based
                            on the size of the tanker and the distance between the filling point 
-                           and the customer and costs between 320gh<span>&#8373;</span> and 450gh<span class="cedis">&#8373;</span>.
+                           and the customer and costs between 320gh<span class="cedis">&#8373;</span> and 450gh<span class="cedis">&#8373;</span>.
                         </p>
                     </div>
 
