--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     </p>
                     <div class="contact-us-black-line"></div>
                     <p class="contact-us-text">
-                        <a class="contact-us-social-link" href="facebook.com" target="_blank" rel="noopener noreferrer">Facebook us.</a>
+                        <a class="contact-us-social-link" href="https://web.facebook.com/Water-Tanker-Supply-105723415121720" target="_blank" rel="noopener noreferrer">Facebook us.</a>
                     </p>
                 </div>
             </div>
@@ -336,7 +336,7 @@
 
             <div class="social-links">
                 <div class="social-margin"><a class="footer-links" href="https://twitter.com/wt_supply" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></div>
-                <div class="social-margin"><a class="footer-links" href="facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></div>
+                <div class="social-margin"><a class="footer-links" href="https://web.facebook.com/Water-Tanker-Supply-105723415121720" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></div>
             </div>
         </div>
 
