--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <figure class="overlay-image view" id="index.html">
             <img class="image" src="images/Water Hero Illustration-8-small-size.png" alt="background image">
             <figcaption class="overlay-text hero-text">WATER SUPPLY, SIMPLIFIED!</figcaption>
-            <p class="hero-text1">Thinking of how to get portable water to your
+            <p class="hero-text1">Thinking of how to get potable water to your
                 property or for your business or simply getting water when<br>
                 the main supply goes off? No worries we got you.
             </p>
