--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Thinking of how to get potable water to your property or for your business or simply getting water when the main supply goes off? No worries we got you.">
-    <meta name="keywords" content="Water, Tanker, Supply">
+    <meta name="keywords" content="Water Tanker Supply, Tanker Water Supply, Water Tanker, Water Supply, Tanker Water, Water Tanker delivery, Water Tanker, Water Car">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="css/styles.css">
