--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Thinking of how to get potable water to your property or for your business or simply getting water when the main supply goes off? No worries we got you.">
-    <meta name="keywords" content="Water Tanker Supply, Water Supply Tanker, Tanker Water Supply, Water Tanker, Water Supply, Tanker Water, Water Tanker delivery, Water Tanker, Water Car">
+    <meta name="keywords" content="Water Tanker Supply, Water Supply Tanker, Tanker Water Supply, Water Tanker, Water Supply, Tanker Water, Water Tanker delivery, Water Car, Water tanker Supply near me">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="css/styles.css">
@@ -204,46 +204,42 @@
                 <!--Creating Collapsibles/Accordion-->
                 <div class="acc-flex">
 
-                    <button class="accordion"><b>What is the size of water delivery tanker?</b></button>
+                    <button class="accordion"><b>Do you deliver bore-hole or pipe-borne water?</b></button>
                     <div class="panel">
-                        <p>Water delivery tankers holds 10,000 litres and 13,000 litres.</p>
+                        <p>We only deliver pipe-borne water.</p>
+                    </div>
+
+                    <button class="accordion"><b>What is the size of the water delivery tanker?</b></button>
+                    <div class="panel">
+                        <p>Water tanker capacity ranges from 10,000liters(Rambo-1000) to 13,000liters(Rambo-1,300).</p>
                     </div>
 
                     <button class="accordion"><b>What is the cost of a tanker delivery?</b></button>
                     <div class="panel">
                         <p>Tanker delivery cost is based
-                           on the size of the tanker and the distance between the filling point 
-                           and the customer and costs between 300gh<span class="cedis">&#8373;</span> and 450gh<span class="cedis">&#8373;</span>.
+                           on the distance between the filling point 
+                           and the customer, and costs between 300gh<span class="cedis">&#8373;</span> and 450gh<span class="cedis">&#8373;</span>.
                         </p>
+                    </div>
+
+                    <button class="accordion"><b>What if my water storage is small?</b></button>
+                    <div class="panel">
+                        <p>You still pay for the full cost of the service.</p>
                     </div>
 
                     <button class="accordion"><b>Are there any extra delivery charges?</b></button>
                     <div class="panel">
                         <p>Yes, there are sometimes extra delivery charges.
                             For example, if the main supply goes off in 
-                            Tema due to maintenance works. Tankers
+                            Tema due to maintenance work. Tankers
                             would have to get water from Accra to Tema hence increasing the cost.
                         </p>
-                    </div>
-
-                    <button class="accordion"><b>What if my water storage is small?</b></button>
-                    <div class="panel">
-                        <p>You still pay for the full cost of the service.
-                            However the remainder of the water could be given
-                            to a neighbour, used for watering of garden, etc,
-                            if allowed by you.
-                        </p>
-                    </div>
-
-                    <button class="accordion"><b>Do you deliver bore-hole or treated water?</b></button>
-                    <div class="panel">
-                        <p>We only deliver treated water, treated by Ghana water company.</p>
                     </div>
 
                     <button class="accordion"><b>How long does delivery take?</b></button>
                     <div class="panel">
                         <p>Delivery time varies based on distance and traffic situation. 
-                           However we guarantee to deliver all orders between 1 and 2 hours after
+                           However, we guarantee to deliver all orders between 1 and 2 hours after
                            order is placed.
                         </p>
                     </div>
